Fixed overflow

--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
   margin: 0;
 }
 
-.copy {
-  cursor: pointer;
+html {
+  overflow: hidden;
 }
 
 body {
@@ -20,6 +20,7 @@ body {
   text-transform: uppercase;
   background: linear-gradient(to right, red, yellow);
   display: flex;
+  overflow: auto;
 }
 
 .container {
@@ -89,6 +90,10 @@ button {
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 3px;
   box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.1);
+}
+
+.copy {
+  cursor: pointer;
 }
 
 /* Media Queries ----------------- */
